# UR3_Touch-Avoidance

./: README.md  test_custom.cpp  test_force.cpp  ur3_moveit_planning_execution
ur3_moveit_config/config/: sensors_rgbd.yaml
ur3_moveit_config/launch/: .demo.launch.swp  .ur3_moveit_sensor_manager.launch.xml.swp  ur3_moveit_sensor_manager.launch.xml
ur_gazebo/launch/: ur3_xtion.launch
ur_test/: CMakeLists.txt  CMakeLists.txt~  package.xml
ur_test/launch/: test_plan.launch
ur_test/src/: add_collision.cpp  test_client.cpp  test_collision.cpp  test_custom.cpp  test_force.cpp  test_home.cpp  test_joint.cpp  test_kinematic.cpp  test_random.cpp  test_scene.cpp  test_tcp.cpp  test_tcp.cpp.back  test_tcp.cpp.ppp
